--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -27,7 +27,7 @@
         <!--======= MERKEZ SAĞLIK ÇALIŞANLARI =====-->
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="tm-section-title tm-clinic-title">Merkez Sağlık Çalışanları</div>
-          <form class="tm-form-wide">
+          <form class="tm-form-wide" action="/panel/clinic-summary" method="GET">
             <div class="form-box">
               <div class="title">MSağlık Çalışanı Adı Soyadı</div>
               <div class="form-group">
@@ -97,7 +97,7 @@
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
                   </svg></button
               ></a>
-              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+              <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
           </form>
         </div>
