--- a/src/views/clinic-panel/pages/add-clinic/address-correction.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/address-correction.ejs
@@ -53,7 +53,7 @@
                 <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
               </svg></button
           ></a>
-          <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+          <a href="/panel/clinic-detail" class="btn btn-secondary mx-2">Sonraki Adım</a>
         </div>
       </div>
     </div>
