--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -25,28 +25,28 @@
       <div class="tm-section-title">Merkezinizin Adı Nedir?</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <form class="tm-form-wide">
+          <form class="tm-form-wide" action="/panel/company-information" method="POST">
             <div class="form-group">
               <label for="center-name">Merkezin Adını Girin</label>
               <input type="text" class="form-control" id="center-name" placeholder="Türk" />
             </div>
             <div class="tm-text-info">Aşağıda yer alan merkezlerden tam eşleşeni seçiniz.</div>
-            <div class="form-group checkbox">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-              <label class="form-check-label" for="flexCheckChecked"> Türkmed Diyaliz Merkezi / Sultanbeyli </label>
-            </div>
-            <div class="form-group checkbox">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-              <label class="form-check-label" for="flexCheckChecked"> Türkmed Diyaliz Merkezi / Kartal </label>
-            </div>
+            <% if (list.length > 0) { %> 
+              <% list.forEach(element => { %>
+              <div class="form-group checkbox">
+                <input class="form-check-input" name="companyId" type="checkbox" value="<%- element._id %>" id="<%- element._id %>" />
+                <label class="form-check-label" for="flexCheckChecked"> <%- element.companyInformation.companyName %> </label>
+              </div>
+              <% }) %>
+             <% } %>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <a href="/panel/choose-personel"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
                   </svg></button
               ></a>
-              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+              <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
           </form>
         </div>
