--- a/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
@@ -25,23 +25,23 @@
       <div class="tm-section-title tm-clinic-title">Kişisel Bilgileriniz</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <form class="tm-form-wide" action="/panel/choose-center" method="POST">
+          <form class="tm-form-wide" action="/panel/choose-center" method="GET">
             <div class="form-group">
               <label for="name-surname">Ad Soyad</label>
-              <input type="text" class="form-control" id="nameSurname" value="GELECEK" placeholder="Adınız Soyadınız" />
+              <input type="text" class="form-control" id="nameSurname" name="nameSurname" value="GELECEK" placeholder="Adınız Soyadınız" />
             </div>
             <div class="form-group">
               <label for="email">Email Adresi</label>
-              <input type="email" class="form-control" id="email" value="GELECEK" aria-describedby="emailHelp" placeholder="Email Adresiz" />
+              <input type="email" class="form-control" id="email" name="email" value="GELECEK" aria-describedby="emailHelp" placeholder="Email Adresiz" />
             </div>
             <div class="form-group">
               <label for="phone">Cep Telefonu</label>
-              <input type="tel" class="form-control" id="phone" value="GELECEK" placeholder="Cep Telefonunuz" />
+              <input type="tel" class="form-control" id="phone" name="phone" value="GELECEK" placeholder="Cep Telefonunuz" />
             </div>
             <div class="form-group">
               <label for="job-dropdown">Görevinizi Seçiniz</label>
               <div class="dropdown select">
-                <select class="btn btn-dropdown dropdown-toggle" type="button" id="job-dropdown" name="job" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <select class="btn btn-dropdown dropdown-toggle" type="button" id="job" name="job" name="job" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <option selected>Göreviniz</option>
                   <option value="1">Başhekim</option>
                   <option value="2">Doktor</option>
@@ -50,13 +50,13 @@
               </div>
             </div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <!-- <a href=""
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
                   </svg></button
-              ></a>
-              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+              ></a> -->
+              <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
           </form>
         </div>
