--- a/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
@@ -27,117 +27,117 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="tm-section-title tm-clinic-title">Merkez Detayları</div>
-          <form class="tm-form-wide">
+          <form class="tm-form-wide" action="/panel/clinic-services" method="POST">
             <div class="form-box">
               <div class="title">Merkez Binası Tipi</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Müstakil Binalı Merkezler </label>
+                <input class="form-check-input" type="checkbox" id="buildType" name="buildType" value="Müstakil Binalı Merkezler" />
+                <label class="form-check-label selected" for="buildType"> Müstakil Binalı Merkezler </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Müstakil Binada Olmayan Merkezler </label>
+                <input class="form-check-input" type="checkbox" id="buildType" name="buildType" value="Müstakil Binada Olmayan Merkezler" />
+                <label class="form-check-label" for="buildType"> Müstakil Binada Olmayan Merkezler </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hastane İçi Merkezler </label>
+                <input class="form-check-input" type="checkbox" id="buildType" name="buildType" value="Hastane İçi Merkezler" />
+                <label class="form-check-label" for="buildType"> Hastane İçi Merkezler </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Diğer </label>
+                <input class="form-check-input" type="checkbox" id="buildType" name="buildType" value="Diğer" />
+                <label class="form-check-label" for="buildType"> Diğer </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Diyaliz Merkeziniz</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Özel Merkez </label>
+                <input class="form-check-input" type="checkbox" id="centerType" name="centerType" value="Özel Merkez" />
+                <label class="form-check-label selected" for="centerType"> Özel Merkez </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Kamuya Ait Diyaliz Merkezi </label>
+                <input class="form-check-input" type="checkbox" id="centerType" name="centerType" value="Kamuya Ait Diyaliz Merkezi" />
+                <label class="form-check-label" for="centerType"> Kamuya Ait Diyaliz Merkezi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Üniversite Diyaliz Merkezi </label>
+                <input class="form-check-input" type="checkbox" id="centerType" name="centerType" value="Üniversite Diyaliz Merkezi" />
+                <label class="form-check-label" for="centerType"> Üniversite Diyaliz Merkezi </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Merkez Hasta Aracı Otoparkı</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Kapalı Otopark İmkanı </label>
+                <input class="form-check-input" type="checkbox" value="Kapalı Otopark İmkanı" name="parkingType" id="parkingType" />
+                <label class="form-check-label selected" for="parkingType"> Kapalı Otopark İmkanı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Açık Otopark İmkanı </label>
+                <input class="form-check-input" type="checkbox" value="Açık Otopark İmkanı"  name="parkingType" id="parkingType" />
+                <label class="form-check-label" for="parkingType"> Açık Otopark İmkanı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Yakın Çevrede Otopark İmkanı </label>
+                <input class="form-check-input" type="checkbox" value="Yakın Çevrede Otopark İmkanı"  name="parkingType" id="parkingType" />
+                <label class="form-check-label" for="parkingType"> Yakın Çevrede Otopark İmkanı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Otopark İmkanı Yok </label>
+                <input class="form-check-input" type="checkbox" value="Otopark İmkanı Yok"  name="parkingType" id="parkingType" />
+                <label class="form-check-label" for="parkingType"> Otopark İmkanı Yok </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Tesis İçi İmkanlar</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Tekerlekli Sandalye Kullanım </label>
+                <input class="form-check-input" type="checkbox" value="Tekerlekli Sandalye Kullanım" name="centerServices" id="centerServices" checked />
+                <label class="form-check-label selected" for="centerServices"> Tekerlekli Sandalye Kullanım </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Tutunma Kollu Tuvalet </label>
+                <input class="form-check-input" type="checkbox" value="Tutunma Kollu Tuvalet"  name="centerServices" id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Tutunma Kollu Tuvalet </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Giriş-Çıkış Alanlarında Klima </label>
+                <input class="form-check-input" type="checkbox" value="Giriş-Çıkış Alanlarında Klima"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Giriş-Çıkış Alanlarında Klima </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hassas Tartı </label>
+                <input class="form-check-input" type="checkbox" value="Hassas Tartı"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Hassas Tartı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Rampalı Hassas Tartı </label>
+                <input class="form-check-input" type="checkbox" value="Rampalı Hassas Tartı"  name="centerServices"  id="centerServices" checked />
+                <label class="form-check-label selected" for="centerServices"> Rampalı Hassas Tartı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Kişisel Eşyalar İçin Kilitli Dolap </label>
+                <input class="form-check-input" type="checkbox" value="Kişisel Eşyalar İçin Kilitli Dolap"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Kişisel Eşyalar İçin Kilitli Dolap </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hasta Aracı Otoparkı </label>
+                <input class="form-check-input" type="checkbox" value="Hasta Aracı Otoparkı"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Hasta Aracı Otoparkı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Ambulans Hizmeti </label>
+                <input class="form-check-input" type="checkbox" value="Ambulans Hizmeti"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Ambulans Hizmeti </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> 7/24 Ulaşılabilirlik </label>
+                <input class="form-check-input" type="checkbox" value="7/24 Ulaşılabilirlik"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> 7/24 Ulaşılabilirlik </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> İzole Hasta Odası </label>
+                <input class="form-check-input" type="checkbox" value="İzole Hasta Odası"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> İzole Hasta Odası </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> El Kumandalı Otomatik Yatak </label>
+                <input class="form-check-input" type="checkbox" value="El Kumandalı Otomatik Yatak"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> El Kumandalı Otomatik Yatak </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hava Filtreleme Cihazı </label>
+                <input class="form-check-input" type="checkbox" value="Hava Filtreleme Cihazı"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Hava Filtreleme Cihazı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Sedyeli Hasta Servisi </label>
+                <input class="form-check-input" type="checkbox" value="Sedyeli Hasta Servisi"  name="centerServices"  id="centerServices" />
+                <label class="form-check-label" for="centerServices"> Sedyeli Hasta Servisi </label>
               </div>
             </div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <a href="/panel/address-correction"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
