--- a/src/views/clinic-panel/pages/add-clinic/clinic-summary.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-summary.ejs
@@ -40,7 +40,7 @@
               <img src="../user/img/clinic/center-agg-ss.png" alt="Center Agreement Screenshot" class="agg-img" />
               <div class="tm-button-next left">
                 <a href="./clinic-doctors.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-                <a href="./clinic-login.html" class="btn-second">Sonraki Adım</a>
+                <a href="/panel/clinic-save" class="btn-second">Kaydet</a>
               </div>
               <div class="form-group checkbox checkbox-aggreement">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
