--- a/src/views/clinic-panel/pages/add-clinic/company-information.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/company-information.ejs
@@ -27,7 +27,7 @@
   <div id="section-ii" class="tm-margin-3">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <!-- <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="tm-section-title">Merkezinizin Adı Nedir?</div>
           <form class="tm-form-wide">
             <div class="form-group">
@@ -44,35 +44,35 @@
               <label class="form-check-label" for="flexCheckChecked"> Türkmed Diyaliz Merkezi / Kartal </label>
             </div>
           </form>
-        </div>
+        </div> -->
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="tm-section-title">Şirket Bilgileri</div>
-          <form class="tm-form-wide">
+          <form class="tm-form-wide" action="/panel/choose-address" method="POST">
             <div class="form-group">
               <label for="company-name">Şirket İsmi</label>
-              <input type="text" class="form-control" id="company-name" placeholder="Şirket İsmi" />
+              <input type="text" class="form-control" id="companyName" name="companyName" value="<%- center.companyInformation.companyName || ""  %>"  placeholder="Şirket İsmi" />
             </div>
             <div class="form-group">
               <label for="company-address">Şirket Adresi</label>
-              <input type="text" class="form-control" id="company-address" placeholder="Şirket Adresi" />
+              <input type="text" class="form-control" id="adressDetailText" name="adressDetailText" value="<%- center.adress.adressDetailText || ""  %>" placeholder="Şirket Adresi" />
             </div>
             <div class="form-group">
               <label for="tax-number">Vergi Numarası</label>
-              <input type="number" class="form-control" id="tax-number" placeholder="Vergi Numarası" />
+              <input type="text" class="form-control" id="taxNumber" name="taxNumber" value="<%- center.companyInformation.taxNumber || ""  %>" placeholder="Vergi Numarası" />
             </div>
             <div class="form-group">
               <label for="tax-center-number">Vergi Dairesi Numarası</label>
-              <input type="number" class="form-control" id="tax-center-number" placeholder="Vergi Dairesi Numarası" />
+              <input type="text" class="form-control" id="taxOffice" name="taxOffice" value="<%- center.companyInformation.taxOffice || ""  %>" placeholder="Vergi Dairesi Numarası" />
             </div>
             <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <a href="/panel/choose-center"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
                   </svg></button
               ></a>
-              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+              <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
           </form>
         </div>
